@@ -1,6 +1,7 @@
 This file documents the revision history for Perl extension Catalyst.
 
 5.57
+        - Updated uri_for to accept undef actions
         - Switched to Module::Install
         - Renamed tests for easier editing
         - Reformatted documentation
